--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 </script>
 <!-- ads -->
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8584970292834519"
+     crossorigin="anonymous"></script>
 
 
 
