--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="col-lg-12 col-md-4 col-6 list-grid">
               <a  title="Drift Boss" href="/play/drift-boss.html">
                 <div class="list-game">
-                  <div class="list-thumbnail"><img src="https://boxing2.github.io/img/drift-boss.png" data-src="https://boxing2.github.io/img/drift-boss.png" class="small-thumb img-rounded lazyload" alt="Drift Boss"></div>
+                  <div class="list-thumbnail"><img src="https://23azostore.github.io/img/drift-boss.png" data-src="https://23azostore.github.io/img/drift-boss.png" class="small-thumb img-rounded lazyload" alt="Drift Boss"></div>
                   <div style="color: white;"><strong>Drift Boss</strong></div>
                 </div>
               </a>
@@ -186,17 +186,7 @@
             <br/>
 <hr>
 
-<div class="vex_x">
-  <div class="col-lg-12 col-md-4 col-6 list-grid">
-              <a  title="Drive Mad" href="/play/drive-mad.html">
-                <div class="list-game">
-                  <div class="list-thumbnail"><img src="https://boxing2.github.io/img/drive-mad.png" data-src="https://boxing2.github.io/img/drive-mad.png" class="small-thumb img-rounded" alt="Drive Mad"></div>
-                  <div style="color: white;"><strong>Drive Mad</strong></div>
-                </div>
-              </a>
-            </div> 
-            </div>  
-            <br/>
+
 
         </div>
       </div>
@@ -220,7 +210,7 @@
     <a href="/play/idle-lumber-inc">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/idle-lumber-inc.png" data-src="https://boxing2.github.io/img/idle-lumber-inc.png" class="small-thumb img-rounded lazyload" alt="Idle Lumber Inc"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/idle-lumber-inc.png" data-src="https://23azostore.github.io/img/idle-lumber-inc.png" class="small-thumb img-rounded lazyload" alt="Idle Lumber Inc"></div>
         <div class="list-info">
           <div class="list-title">Idle Lumber Inc</div>
           <div class="list-category">Mouse</div>
@@ -234,7 +224,7 @@
     <a href="/play/house-of-hazards">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/house-of-hazards.png" data-src="https://boxing2.github.io/img/house-of-hazards.png" class="small-thumb img-rounded lazyload" alt="House Of Hazards"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/house-of-hazards.png" data-src="https://23azostore.github.io/img/house-of-hazards.png" class="small-thumb img-rounded lazyload" alt="House Of Hazards"></div>
         <div class="list-info">
           <div class="list-title">House Of Hazards</div>
           <div class="list-category">Skill</div>
@@ -248,7 +238,7 @@
     <a href="/play/merge-round-racers">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/merge-round-racers.png" data-src="https://boxing2.github.io/img/merge-round-racers.png" class="small-thumb img-rounded lazyload" alt="Merge Round Racers"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/merge-round-racers.png" data-src="https://23azostore.github.io/img/merge-round-racers.png" class="small-thumb img-rounded lazyload" alt="Merge Round Racers"></div>
         <div class="list-info">
           <div class="list-title">Merge Round Racers</div>
           <div class="list-category">Racing</div>
@@ -262,7 +252,7 @@
     <a href="/play/tiger-simulator-3d">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/tiger-simulator-3d.png" data-src="https://boxing2.github.io/img/tiger-simulator-3d.png" class="small-thumb img-rounded lazyload" alt="Tiger Simulator 3d"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/tiger-simulator-3d.png" data-src="https://23azostore.github.io/img/tiger-simulator-3d.png" class="small-thumb img-rounded lazyload" alt="Tiger Simulator 3d"></div>
         <div class="list-info">
           <div class="list-title">Tiger Simulator 3d</div>
           <div class="list-category">for Girls</div>
@@ -276,7 +266,7 @@
     <a href="/play/tunnel-rush">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/tunnel-rush.png" data-src="https://boxing2.github.io/img/tunnel-rush.png" class="small-thumb img-rounded lazyload" alt="Tunnel Rush"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/tunnel-rush.png" data-src="https://23azostore.github.io/img/tunnel-rush.png" class="small-thumb img-rounded lazyload" alt="Tunnel Rush"></div>
         <div class="list-info">
           <div class="list-title">Tunnel Rush</div>
           <div class="list-category">for Girls</div>
@@ -290,7 +280,7 @@
     <a href="/play/top-speed-racing-3d">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/top-speed-racing-3d.png" data-src="https://boxing2.github.io/img/top-speed-racing-3d.png" class="small-thumb img-rounded lazyload" alt="Top Speed Racing 3d"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/top-speed-racing-3d.png" data-src="https://23azostore.github.io/img/top-speed-racing-3d.png" class="small-thumb img-rounded lazyload" alt="Top Speed Racing 3d"></div>
         <div class="list-info">
           <div class="list-title">Top Speed Racing 3d</div>
           <div class="list-category">Racing</div>
@@ -304,7 +294,7 @@
     <a href="/play/temple-of-boom">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/temple-of-boom.png" data-src="https://boxing2.github.io/img/temple-of-boom.png" class="small-thumb img-rounded lazyload" alt="Temple Of Boom"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/temple-of-boom.png" data-src="https://23azostore.github.io/img/temple-of-boom.png" class="small-thumb img-rounded lazyload" alt="Temple Of Boom"></div>
         <div class="list-info">
           <div class="list-title">Temple Of Boom</div>
           <div class="list-category">Adventure</div>
@@ -318,7 +308,7 @@
     <a href="/play/masked-forces">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/masked-forces.png" data-src="https://boxing2.github.io/img/masked-forces.png" class="small-thumb img-rounded lazyload" alt="Masked Forces"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/masked-forces.png" data-src="https://23azostore.github.io/img/masked-forces.png" class="small-thumb img-rounded lazyload" alt="Masked Forces"></div>
         <div class="list-info">
           <div class="list-title">Masked Forces</div>
           <div class="list-category">Action</div>
@@ -332,7 +322,7 @@
     <a href="/play/tag">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/tag.png" data-src="https://boxing2.github.io/img/tag.png" class="small-thumb img-rounded lazyload" alt="Tag"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/tag.png" data-src="https://23azostore.github.io/img/tag.png" class="small-thumb img-rounded lazyload" alt="Tag"></div>
         <div class="list-info">
           <div class="list-title">Tag</div>
           <div class="list-category">Sports</div>
@@ -346,7 +336,7 @@
     <a href="/play/gold-digger-frvr">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/gold-digger-frvr.png" data-src="https://boxing2.github.io/img/gold-digger-frvr.png" class="small-thumb img-rounded lazyload" alt="Gold Digger Frvr"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/gold-digger-frvr.png" data-src="https://23azostore.github.io/img/gold-digger-frvr.png" class="small-thumb img-rounded lazyload" alt="Gold Digger Frvr"></div>
         <div class="list-info">
           <div class="list-title">Gold Digger Frvr</div>
           <div class="list-category">for Girls</div>
@@ -360,7 +350,7 @@
     <a href="/play/getaway-shootout">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/getaway-shootout.png" data-src="https://boxing2.github.io/img/getaway-shootout.png" class="small-thumb img-rounded lazyload" alt="Getaway Shootout"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/getaway-shootout.png" data-src="https://23azostore.github.io/img/getaway-shootout.png" class="small-thumb img-rounded lazyload" alt="Getaway Shootout"></div>
         <div class="list-info">
           <div class="list-title">Getaway Shootout</div>
           <div class="list-category">Action</div>
@@ -374,7 +364,7 @@
     <a href="/play/water-color-sort">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://boxing2.github.io/img/water-color-sort.png" data-src="https://boxing2.github.io/img/water-color-sort.png" class="small-thumb img-rounded lazyload" alt="Water Color Sort"></div>
+        <div class="list-thumbnail"><img src="https://23azostore.github.io/img/water-color-sort.png" data-src="https://23azostore.github.io/img/water-color-sort.png" class="small-thumb img-rounded lazyload" alt="Water Color Sort"></div>
         <div class="list-info">
           <div class="list-title">Water Color Sort</div>
           <div class="list-category">Thinking</div>
